force-app/main/default/objects/Article_Views__c/Article_Views__c.object-meta.xml
<CustomObject>
    <label>Article Views</label>
    <nameField>
        <displayFormat>AV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>