force-app/main/default/objects/Article_Views__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Article Views</relationshipLabel>
    <relationshipName>Article_Views</relationshipName>
    <type>Lookup</type>
</CustomField>