force-app/main/default/objects/Article_Views__c/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <formula>Article__r.Article_Link__c</formula>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>