force-app/main/default/objects/Article_Views__c/fields/ArticleId__c.field-meta.xml
<CustomField>
    <fullName>ArticleId__c</fullName>
    <label>ArticleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>